tests/machine/x/ocaml/string_contains.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_contains.ml", line 21, characters 27-35:
21 |   print_endline (__show (s.contains "cat"));
                                ^^^^^^^^
Error: Unbound record field contains
Hint: Did you mean contents?


Context (around line 21):
  19 | 
  20 | let () =
  21 |   print_endline (__show (s.contains "cat"));
  22 |   print_endline (__show (s.contains "dog"));
  23 | 
